--- a/views/add_preinstallation.html
+++ b/views/add_preinstallation.html
@@ -218,8 +218,10 @@
                                                 <td>Site Power Outlet Available</td>
                                                 <td>
                                                     <div class="form-group" style="margin-left: 5px!important;">
-                                                        <input type="checkbox" style="width: 20px" class="checkbox form-control" id="preinstallCheck" name="sitepowerCheck"></td>
-                                                </div>
+                                                        <input type="checkbox" style="width: 20px" class="checkbox form-control" id="preinstallCheck" name="sitepowerCheck">
+                                                    </div>
+                                                </td>
+
                                                 <td>
                                                     <div class="form-group">
                                                         <div class="col-lg-10">
@@ -239,8 +241,9 @@
                                                 <td>Required Tools Available</td>
                                                 <td>
                                                     <div class="form-group" style="margin-left: 5px!important;">
-                                                        <input type="checkbox" style="width: 20px" class="checkbox form-control" id="requiredtoolCheck" name="requiredtoolCheck"></td>
-                                                </div>
+                                                        <input type="checkbox" style="width: 20px" class="checkbox form-control" id="requiredtoolCheck" name="requiredtoolCheck"></div>
+                                                </td>
+
                                                 <td>
                                                     <div class="form-group">
                                                         <div class="col-lg-10">
@@ -260,8 +263,10 @@
                                                 <td>Required Supplies Available</td>
                                                 <td>
                                                     <div class="form-group" style="margin-left: 5px!important;">
-                                                        <input type="checkbox" style="width: 20px" class="checkbox form-control" id="requiredsupllyCheck" name="requiredsupllyCheck"></td>
-                                                </div>
+                                                        <input type="checkbox" style="width: 20px" class="checkbox form-control" id="requiredsupllyCheck" name="requiredsupllyCheck">
+                                                    </div>
+                                                </td>
+
                                                 <td>
                                                     <div class="form-group">
                                                         <div class="col-lg-10">
@@ -281,8 +286,9 @@
                                                 <td>Site Can Be Locked After Hours</td>
                                                 <td>
                                                     <div class="form-group" style="margin-left: 5px!important;">
-                                                        <input type="checkbox" style="width: 20px" class="checkbox form-control" id="sitelockCheck" name="sitelockCheck"></td>
-                                                </div>
+                                                        <input type="checkbox" style="width: 20px" class="checkbox form-control" id="sitelockCheck" name="sitelockCheck"></div>
+                                                </td>
+
                                                 <td>
                                                     <div class="form-group">
                                                         <div class="col-lg-10">
@@ -302,8 +308,9 @@
                                                 <td>Lock Keys Assigned To Personnel</td>
                                                 <td>
                                                     <div class="form-group" style="margin-left: 5px!important;">
-                                                        <input type="checkbox" style="width: 20px" class="checkbox form-control" id="lockkeyCheck" name="lockkeyCheck"></td>
-                                                </div>
+                                                        <input type="checkbox" style="width: 20px" class="checkbox form-control" id="lockkeyCheck" name="lockkeyCheck"></div>
+                                                </td>
+
                                                 <td>
                                                     <div class="form-group">
                                                         <div class="col-lg-10">
@@ -315,8 +322,8 @@
                                                     <div class="form-group">
                                                         <div class="col-lg-10">
                                                             <input class=" form-control" id="lockkeyComment" name="lockkeyComment" placeholder="Enter Any Comments" type="text" />
+
                                                         </div>
-                                                    </div>
                                                 </td>
                                             </tr>
                                         </tbody>
@@ -346,13 +353,13 @@
                                         </div>
                                     </div>
                                 </form>
+                                </div>
                             </div>
+                            <!-- /form-panel -->
                         </div>
-                        <!-- /form-panel -->
+                        <!-- /col-lg-12 -->
                     </div>
-                    <!-- /col-lg-12 -->
-                </div>
-                <!-- /row -->
+                    <!-- /row -->
             </section>
             <!-- /wrapper -->
         </section>
