--- a/views/home/CatheterPre_installation.handlebars
+++ b/views/home/CatheterPre_installation.handlebars
@@ -35,7 +35,6 @@
 </head>
 
 <body>
-    {{#each newform}}
     <section id="container">
         <!-- **********************************************************************************************************************************************************
         TOP BAR CONTENT & NOTIFICATIONS
@@ -152,17 +151,21 @@
 
                                 <thead>
                                     <tr class="centerRow">
+                                        <th></th>
                                         <th  >Equipment</th>
                                         <th >Serial Number</th>
                                         <th >Date</th>
-                                        <th >Name</th>
+                                        <th >Name of The Responsible</th>
                                         <th class="hidden-phone">Floor</th>
                                         <th class="hidden-phone">Room</th>
                                         
                                     </tr>
                                 </thead>
                                 <tbody>
+                                        {{#each newform}}
+
                                     <tr class="gradeA">
+                                        <td><a href="/CatheterPreinstallationReport"><img src="lib/advanced-datatable/images/details_open.png"></a></td>
                                         <td>{{this.dataValues.Equipment}}</td>
                                         <td>{{this.dataValues.SerialNO}}</td>
                                         <td>{{this.dataValues.Date}}</td>
@@ -172,7 +175,8 @@
 
                                         
                                     </tr>
-                                  
+                                       {{/each}} 
+
                                 </tbody>
                             </table>
                         </div>
@@ -227,189 +231,33 @@
     <script src="lib/common-scripts.js"></script>
 
     <!--script for this page-->
-    <script type="text/javascript">
+       <script type="text/javascript">
     
         /* Formating function for row details */
-        function fnFormatDetails(oTable, nTr) {
-            var aData = oTable.fnGetData(nTr);
-            var sOut = '<table cellpadding="5" cellspacing="0" border="0" style="padding-left:50px;margin:auto">';
-            sOut +="<tr><td>Equipment's Name:</td><td>" + aData[1] + '</td></tr>';
-            sOut +="<tr><td>Equipment's Serial Number:</td><td>" + aData[2] + '</td></tr>';
-            sOut += '<tr><td>Date:</td><td>' + aData[3] + '</td></tr>';
-            sOut += '<tr><td>The Person Who Filled The Form:</td><td>' + aData[4] + '</td></tr>';
-            sOut +="<tr><td>Floor's Number: </td><td>" + aData[5] + '</td> </tr>';
-            sOut +="<tr><td>Room's Number: </td><td>" + aData[6] + '</td> </tr>';
-            sOut += '</table>';
-            sOut += `<div class="table">
-
-<div class="row head">
-    <div class="cell">
-        Task Description
-    </div>
-    <div class="cell">
-        Check
-    </div>
-    <div class="cell pl-5">
-        Responsibility of (Name)
-    </div>
-    <div class="cell pl-5">
-        Comments
-    </div>
-</div>
-
-<div class="row notheader">
    
-    <div class="cell">
-        Pre-Installation Form Copied
-    </div>
-    <div class="cell">
-        <div class="form-group" style="margin-left: 5px!important;">
-            <input disabled type="checkbox" style="width: 20px" class="checkbox form-control" >
-        </div>
-    </div>
-    <div class="cell">
-        <span> {{this.dataValues.Pre_installationFormCopiedRON}}</span>
-    </div>
-    <div class="cell pl-3">
-        <span> {{this.dataValues.Pre_installationFormCopiedComment}}</span>
-    </div>
-</div>
-<div class="row notheader">
-    <div class="cell">
-        Site Power Outlet Available
-    </div>
-    <div class="cell">
-        <div class="form-group" style="margin-left: 5px!important;">
-            <input disabled type="checkbox" style="width: 20px" class="checkbox form-control" >
-        </div>
-    </div>
-    <div class="cell">
-        <span> {{this.dataValues.SitePowerOutletAvailableRON}} </span>
-    </div>
-    <div class="cell pl-3">
-        <span> {{this.dataValues.SitePowerOutletAvailableComment}} </span>
-    </div>
-</div>
-<div class="row notheader">
-    <div class="cell">
-        Required Tools Available
-    </div>
-    <div class="cell">
-        <div class="form-group" style="margin-left: 5px!important;">
-            <input disabled type="checkbox" style="width: 20px" class="checkbox form-control" >
-        </div>
-    </div>
-    <div class="cell">
-        <span> {{this.dataValues.RequiredToolsAvailableRON}}</span>
-    </div>
-    <div class="cell pl-3">
-        <span> {{this.dataValues.RequiredToolsAvailableComment}} </span>
-    </div>
-</div>
-<div class="row notheader">
-    <div class="cell">
-        Required Supplies Available
-    </div>
-    <div class="cell">
-        <div class="form-group" style="margin-left: 5px!important;">
-            <input disabled type="checkbox" style="width: 20px" class="checkbox form-control" >
-        </div>
-    </div>
-    <div class="cell">
-        <span> {{this.dataValues.RequiredSuppliesAvailableRON}} </span>
-    </div>
-    <div class="cell pl-3">
-        <span>{{this.dataValues.RequiredSuppliesAvailableComment}} </span>
-    </div>
-</div>
-
-<div class="row notheader">
-    <div class="cell">
-        Site Can Be Locked After Hours
-    </div>
-    <div class="cell">
-        <div class="form-group" style="margin-left: 5px!important;">
-            <input disabled type="checkbox" style="width: 20px" class="checkbox form-control" >
-        </div>
-    </div>
-    <div class="cell">
-        <span> {{this.dataValues.SiteCanBeLockedAfterHoursRON}} </span>
-    </div>
-    <div class="cell pl-3">
-        <span> {{this.dataValues.SiteCanBeLockedAfterHoursComment}} </span>
-    </div>
-</div>
-
-<div class="row notheader">
-    <div class="cell">
-        Lock Keys Assigned To Personnel
-    </div>
-    <div class="cell">
-        <div class="form-group" style="margin-left: 5px!important;">
-            <input disabled type="checkbox" style="width: 20px" class="checkbox form-control" >
-        </div>
-    </div>
-    <div class="cell">
-        <span> {{this.dataValues.LockKeysAssignedToPersonalRON}} </span>
-    </div>
-    <div class="cell pl-3">
-        <span> {{this.dataValues.LockKeysAssignedToPersonalComment}} </span>
-    </div>
-</div>`
-
-            return sOut;
-        }
-
         $(document).ready(function() {
-            /*
-             * Insert a 'details' column to the table
-             */
-            var nCloneTh = document.createElement('th');
-            var nCloneTd = document.createElement('td');
-            nCloneTd.innerHTML = '<img src="lib/advanced-datatable/images/details_open.png">';
-            nCloneTd.className ="center";
+          
 
-            $('#hidden-table-info thead tr').each(function() {
-                this.insertBefore(nCloneTh, this.childNodes[0]);
-            });
-
-            $('#hidden-table-info tbody tr').each(function() {
-                this.insertBefore(nCloneTd.cloneNode(true), this.childNodes[0]);
-            });
-
+          
+          
             /*
              * Initialse DataTables, with no sorting on the 'details' column
              */
             var oTable = $('#hidden-table-info').dataTable({
-           "aoColumnDefs": [{
-               "bSortable": false,
-               "aTargets": [0]
+            "aoColumnDefs": [{
+                "bSortable": false,
+                "aTargets": [0]
                 }],
-           "aaSorting": [
+            "aaSorting": [
                     [1, 'asc']
                 ]
             });
 
-            /* Add event listener for opening and closing details
-             * Note that the indicator for showing which row is open is not controlled by DataTables,
-             * rather it is done here
-             */
-            $('#hidden-table-info tbody td img').live('click', function() {
-                var nTr = $(this).parents('tr')[0];
-                if (oTable.fnIsOpen(nTr)) {
-                    /* This row is already open - close it */
-                    this.src ="lib/advanced-datatable/images/details_open.png";
-                    oTable.fnClose(nTr);
-                } else {
-                    /* Open this row */
-                    this.src ="lib/advanced-datatable/images/details_close.png";
-                    oTable.fnOpen(nTr, fnFormatDetails(oTable, nTr), 'details');
-                }
-            });
+          
+        
         });
         
     </script>
-     {{/each}} 
 </body>
 
 </html>
