--- a/views/home/EmergencyDailyinspection.handlebars
+++ b/views/home/EmergencyDailyinspection.handlebars
@@ -164,7 +164,7 @@
                                 <tbody>
                                     {{#each daily}}
                                     <tr class="gradeA">
-                                        <td><a href="/EmergencyDailyInspectionReport"><img src="lib/advanced-datatable/images/details_open.png"></a></td>
+                                        <td><a href="/EmergencyDailyInspectionReport/{{this.dataValues.SerailNo}}"><img src="lib/advanced-datatable/images/details_open.png"></a></td>
                                         <td>{{this.dataValues.SerailNo}}</td>
                                         <td>{{this.dataValues.Location}}</td>
                                         <td>{{this.dataValues.Authorized_Operator}}</td>
@@ -172,7 +172,6 @@
                                         <td>{{this.dataValues.EndDate}}</td>
 
 
-                                     
                                     </tr>
                                     {{/each}}
                                 </tbody>
