--- a/views/home/SurgeryDailyinspection.handlebars
+++ b/views/home/SurgeryDailyinspection.handlebars
@@ -165,7 +165,7 @@
                                 <tbody>
                                     {{#each daily}}
                                     <tr class="gradeA">
-                                        <td><a href="/SurgeryDailyInspectionReport"><img src="lib/advanced-datatable/images/details_open.png"></a></td>
+                                        <td><a href="/SurgeryDailyInspectionReport/{{this.dataValues.SerailNo}}"><img src="lib/advanced-datatable/images/details_open.png"></a></td>
                                         <td>{{this.dataValues.SerailNo}}</td>
                                         <td>{{this.dataValues.Location}}</td>
                                         <td>{{this.dataValues.Authorized_Operator}}</td>
