--- a/views/home/SurgeryPre_installation.handlebars
+++ b/views/home/SurgeryPre_installation.handlebars
@@ -167,7 +167,7 @@
                                                                         {{#each newform}}
 
                                     <tr class="gradeA">
-                                        <td><a href="/SurgeryPreinstallationReport"><img src="lib/advanced-datatable/images/details_open.png"></a></td>
+                                        <td><a href="/SurgeryPreinstallationReport/{{this.dataValues.SerialNO}}"><img src="lib/advanced-datatable/images/details_open.png"></a></td>
                                         <td>{{this.dataValues.Equipment}}</td>
                                         <td>{{this.dataValues.SerialNO}}</td>
                                         <td>{{this.dataValues.Date}}</td>
