--- a/views/add_preinstallation.html
+++ b/views/add_preinstallation.html
@@ -150,13 +150,14 @@
                             <div class="form">
                                 <form class="cmxform form-horizontal style-form" id="signupForm" method="POST" action="/pre-installationform">
                                     <div class="form-group">
-                                        <label for="department" class="control-label col-lg-2">Department's Name</label>
+                                        <label  class="control-label col-lg-2">Department's Name</label>
                                         <div class="col-lg-10">
-                                            <select class="form-control" id="department" name="department" required>
-                                                <option value="Surgery">Surgery</option>
-                                                <option value="Emergency">Emergency</option>
-                                                <option value="Catheterization">Catheterization</option>
-                                              </select>
+<!--                                            <select class="form-control" id="department" name="department" required>-->
+<!--                                                <option value="Surgery">Surgery</option>-->
+<!--                                                <option value="Emergency">Emergency</option>-->
+<!--                                                <option value="Catheterization">Catheterization</option>-->
+<!--                                              </select>-->
+                                            <input class="form-control"  name="department" type="text" required />
                                         </div>
                                     </div>
                                     <div class="form-group">
