--- a/views/home/CatheterPre_installation.handlebars
+++ b/views/home/CatheterPre_installation.handlebars
@@ -165,7 +165,7 @@
                                         {{#each newform}}
 
                                     <tr class="gradeA">
-                                        <td><a href="/CatheterPreinstallationReport"><img src="lib/advanced-datatable/images/details_open.png"></a></td>
+                                        <td><a href="/CatheterPreinstallationReport/{{this.dataValues.SerialNO}}"><img src="lib/advanced-datatable/images/details_open.png"></a></td>
                                         <td>{{this.dataValues.Equipment}}</td>
                                         <td>{{this.dataValues.SerialNO}}</td>
                                         <td>{{this.dataValues.Date}}</td>
