--- a/views/home/SurgPreinstallReport.handlebars
+++ b/views/home/SurgPreinstallReport.handlebars
@@ -10,22 +10,22 @@
     <title>Management System</title>
 
     <!-- Favicons -->
-    <link href="images/icons/medical.png" rel="icon">
-    <link href="images/icons/medical.png" rel="apple-touch-icon">
+    <link href="../../images/icons/medical.png" rel="icon">
+    <link href="../../images/icons/medical.png" rel="apple-touch-icon">
 
     <!-- Bootstrap core CSS -->
-    <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../../lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <!--external css-->
-    <link href="lib/font-awesome/css/font-awesome.css" rel="stylesheet" />
-    <link href="lib/advanced-datatable/css/demo_page.css" rel="stylesheet" />
-    <link href="lib/advanced-datatable/css/demo_table.css" rel="stylesheet" />
-    <link rel="stylesheet" href="lib/advanced-datatable/css/DT_bootstrap.css" />
-    <link rel="stylesheet" type="text/css" href="lib/bootstrap-datepicker/css/datepicker.css" />
+    <link href="../../lib/font-awesome/css/font-awesome.css" rel="stylesheet" />
+    <link href="../../lib/advanced-datatable/css/demo_page.css" rel="stylesheet" />
+    <link href="../../lib/advanced-datatable/css/demo_table.css" rel="stylesheet" />
+    <link rel="stylesheet" href="../../lib/advanced-datatable/css/DT_bootstrap.css" />
+    <link rel="stylesheet" type="text/css" href="../../lib/bootstrap-datepicker/css/datepicker.css" />
 
     <!-- Custom styles for this template -->
-    <link href="css/style.css" rel="stylesheet">
-    <link href="css/style-responsive.css" rel="stylesheet">
-    <link href="css/main.css" rel="stylesheet">
+    <link href="../../css/style.css" rel="stylesheet">
+    <link href="../../css/style-responsive.css" rel="stylesheet">
+    <link href="../../css/main.css" rel="stylesheet">
 
     <!-- =======================================================
     Template Name: Dashio
@@ -46,7 +46,7 @@
                 <div class="fa fa-bars tooltips" data-placement="right" data-original-title="Toggle Navigation"></div>
             </div>
             <!--logo start-->
-            <a href="/index" class="logo"><img style="width: 140px;height: 40px;" src="images/logo.png" alt="alternative"></a>
+            <a href="../index" class="logo"><img style="width: 140px;height: 40px;" src="../../images/logo.png" alt="alternative"></a>
             <!--logo end-->
 
         </header>
@@ -148,31 +148,31 @@
                     <div class="col-lg-12">
                         <div class="form-panel">
                             <div class="form">
-                                <form class="cmxform form-horizontal style-form" id="signupForm" method="POST" action="/pre-installationform">
+                                <form class="cmxform form-horizontal style-form" id="signupForm" >
                                     <div class="form-group">
                                         <label for="department" class="control-label col-lg-2">Department's Name:</label>
                                         <div class="col-lg-10">
-                                            <p class="form-control-static">any department</p>
+                                            <p class="form-control-static">{{newform.dataValues.Department}}</p>
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <label for="serial" class="control-label col-lg-2">Serial's Number:</label>
                                         <div class="col-lg-4">
-                                            <p class="form-control-static">any serial number</p>
+                                            <p class="form-control-static">{{newform.dataValues.SerialNO}}</p>
                                         </div>
                                         <label style="width:150px; margin-left: 40px;" for="equipment" class="control-label col-lg-2">Equipment's Name:</label>
                                         <div class="col-lg-4">
-                                            <p class="form-control-static">any equipment</p>
+                                            <p class="form-control-static">{{newform.dataValues.Equipment}}</p>
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <label for="floor" class="control-label col-lg-2">Floor's Number:</label>
                                         <div class="col-lg-4">
-                                            <p class="form-control-static">any floor</p>
+                                            <p class="form-control-static">{{newform.dataValues.Floor}}</p>
                                         </div>
                                         <label style="width:140px; margin-left: 40px;" for="room" class="control-label col-lg-2">Room's Number:</label>
                                         <div class="col-lg-4">
-                                            <p class="form-control-static">any room</p>
+                                            <p class="form-control-static">{{newform.dataValues.Room}}</p>
                                         </div>
                                     </div>
                                     <div class="form-group" style="margin-left: 0px;margin-right: 0px;">
@@ -199,14 +199,14 @@
                                                     <td>
                                                         <div>
                                                             <div class="col-lg-10">
-                                                                <p class="form-control-static text-center">any name</p>
+                                                                <p class="form-control-static text-center">{{newform.dataValues.Pre_installationFormCopiedRON}}</p>
                                                             </div>
                                                         </div>
                                                     </td>
                                                     <td>
                                                         <div>
                                                             <div class="col-lg-10">
-                                                                <p class="form-control-static text-center">any comment</p>
+                                                                <p class="form-control-static text-center">{{newform.dataValues.Pre_installationFormCopiedComment}}</p>
                                                             </div>
                                                         </div>
                                                     </td>
@@ -222,14 +222,14 @@
                                                     <td>
                                                         <div>
                                                             <div class="col-lg-10">
-                                                                <p class="form-control-static text-center">any name</p>
+                                                                <p class="form-control-static text-center">{{newform.dataValues.SitePowerOutletAvailableRON}}</p>
                                                             </div>
                                                         </div>
                                                     </td>
                                                     <td>
                                                         <div>
                                                             <div class="col-lg-10">
-                                                                <p class="form-control-static text-center">any comment</p>
+                                                                <p class="form-control-static text-center">{{newform.dataValues.SitePowerOutletAvailableComment}}</p>
                                                             </div>
                                                         </div>
                                                     </td>
@@ -244,14 +244,14 @@
                                                     <td>
                                                         <div>
                                                             <div class="col-lg-10">
-                                                                <p class="form-control-static text-center">any name</p>
+                                                                <p class="form-control-static text-center">{{newform.dataValues.RequiredToolsAvailableRON}}</p>
                                                             </div>
                                                         </div>
                                                     </td>
                                                     <td>
                                                         <div>
                                                             <div class="col-lg-10">
-                                                                <p class="form-control-static text-center">any comment</p>
+                                                                <p class="form-control-static text-center">{{newform.dataValues.RequiredToolsAvailableComment}}</p>
                                                             </div>
                                                         </div>
                                                     </td>
@@ -267,14 +267,14 @@
                                                     <td>
                                                         <div>
                                                             <div class="col-lg-10">
-                                                                <p class="form-control-static text-center">any name</p>
+                                                                <p class="form-control-static text-center">{{newform.dataValues.RequiredSuppliesAvailableRON}}</p>
                                                             </div>
                                                         </div>
                                                     </td>
                                                     <td>
                                                         <div>
                                                             <div class="col-lg-10">
-                                                                <p class="form-control-static text-center">any comment</p>
+                                                                <p class="form-control-static text-center">{{newform.dataValues.RequiredSuppliesAvailableComment}}</p>
                                                             </div>
                                                         </div>
                                                     </td>
@@ -289,14 +289,14 @@
                                                     <td>
                                                         <div>
                                                             <div class="col-lg-10">
-                                                                <p class="form-control-static text-center">any name</p>
+                                                                <p class="form-control-static text-center">{{newform.dataValues.SiteCanBeLockedAfterHoursRON}}</p>
                                                             </div>
                                                         </div>
                                                     </td>
                                                     <td>
                                                         <div>
                                                             <div class="col-lg-10">
-                                                                <p class="form-control-static text-center">any comment</p>
+                                                                <p class="form-control-static text-center">{{newform.dataValues.SiteCanBeLockedAfterHoursComment}}</p>
                                                             </div>
                                                         </div>
                                                     </td>
@@ -311,14 +311,14 @@
                                                     <td>
                                                         <div>
                                                             <div class="col-lg-10">
-                                                                <p class="form-control-static text-center">any name</p>
+                                                                <p class="form-control-static text-center">{{newform.dataValues.LockKeysAssignedToPersonalRON}}</p>
                                                             </div>
                                                         </div>
                                                     </td>
                                                     <td>
                                                         <div>
                                                             <div class="col-lg-10">
-                                                                <p class="form-control-static text-center">any comment</p>
+                                                                <p class="form-control-static text-center">{{newform.dataValues.LockKeysAssignedToPersonalComment}}</p>
 
                                                             </div>
                                                     </td>
@@ -329,13 +329,13 @@
                                         <div class="form-group">
                                             <label for="name" class="control-label col-lg-2">Your Name:</label>
                                             <div class="col-lg-10">
-                                                <p class="form-control-static">any name</p>
+                                                <p class="form-control-static">{{newform.dataValues.Name}}</p>
                                             </div>
                                         </div>
                                         <div class="form-group">
                                             <label for="date" class="control-label col-lg-2">Date:</label>
                                             <div class="col-lg-3">
-                                                <p class="form-control-static">any date</p>
+                                                <p class="form-control-static">{{newform.dataValues.Date}}</p>
                                             </div>
                                         </div>
 
@@ -356,21 +356,21 @@
 
     </section>
     <!-- js placed at the end of the document so the pages load faster -->
-    <script src="lib/form-validation-script.js"></script>
+    <script src="../../lib/form-validation-script.js"></script>
 
-    <script src="lib/jquery/jquery.min.js"></script>
-    <script src="lib/bootstrap/js/bootstrap.min.js"></script>
-    <script class="include" type="text/javascript" src="lib/jquery.dcjqaccordion.2.7.js"></script>
-    <script src="lib/jquery.scrollTo.min.js"></script>
-    <script src="lib/jquery.nicescroll.js" type="text/javascript"></script>
+    <script src="../../lib/jquery/jquery.min.js"></script>
+    <script src="../../lib/bootstrap/js/bootstrap.min.js"></script>
+    <script class="include" type="text/javascript" src="../../lib/jquery.dcjqaccordion.2.7.js"></script>
+    <script src="../../lib/jquery.scrollTo.min.js"></script>
+    <script src="../../lib/jquery.nicescroll.js" type="text/javascript"></script>
     <!--common script for all pages-->
-    <script src="lib/common-scripts.js"></script>
+    <script src="../../lib/common-scripts.js"></script>
     <!--script for this page-->
 
-    <script src="lib/form-validation-script.js"></script>
-    <script type="text/javascript" src="lib/bootstrap-datepicker/js/bootstrap-datepicker.js"></script>
-    <script type="text/javascript" src="lib/bootstrap-daterangepicker/date.js"></script>
-    <script src="lib/advanced-form-components.js"></script>
+    <script src="../../lib/form-validation-script.js"></script>
+    <script type="text/javascript" src="../../lib/bootstrap-datepicker/js/bootstrap-datepicker.js"></script>
+    <script type="text/javascript" src="../../lib/bootstrap-daterangepicker/date.js"></script>
+    <script src="../../lib/advanced-form-components.js"></script>
 
 </body>
 
