--- a/views/add_preinstallation.html
+++ b/views/add_preinstallation.html
@@ -152,12 +152,12 @@
                                     <div class="form-group">
                                         <label  class="control-label col-lg-2">Department's Name</label>
                                         <div class="col-lg-10">
-<!--                                            <select class="form-control" id="department" name="department" required>-->
-<!--                                                <option value="Surgery">Surgery</option>-->
-<!--                                                <option value="Emergency">Emergency</option>-->
-<!--                                                <option value="Catheterization">Catheterization</option>-->
-<!--                                              </select>-->
-                                            <input class="form-control"  name="department" type="text" required />
+                                            <select class="form-control" id="department" name="department" required>
+                                                <option value="Surgery">Surgery</option>
+                                                <option value="Emergency">Emergency</option>
+                                                <option value="Catheterization">Catheterization</option>
+                                              </select>
+                                            <!-- <input class="form-control"  name="department" type="text" required /> -->
                                         </div>
                                     </div>
                                     <div class="form-group">
@@ -177,7 +177,7 @@
                                         <div class="col-lg-4">
                                             <input class="form-control" id="floor" style="width: 100%!important;" name="floor" type="number" required />
                                         </div>
-                                        <label style="width:140px; margin-left: 40px;" for="room" class="control-label col-lg-2">Room's Number</label>
+                                        <label style="width:140px; " for="room" class="control-label col-lg-2">Room's Number</label>
                                         <div class="col-lg-4">
                                             <input class="form-control" style="width: 100%!important;" id="room" name="room" type="number" required />
                                         </div>
