--- a/views/home/SurgPreinstallReport.handlebars
+++ b/views/home/SurgPreinstallReport.handlebars
@@ -192,7 +192,7 @@
                                                     <td>Pre-Installation Form Copied</td>
                                                     <td>
                                                         <div style="margin-left: 5px!important;">
-                                                            <input disabled type="checkbox" style="width: 20px" class="checkbox form-control" value="checked" name="preinstallCheck">
+                                                            <input disabled {{newform.dataValues.Pre_installationFormCopiedCheck}} type="checkbox" style="width: 20px" class="checkbox form-control" value="checked" name="preinstallCheck">
                                                         </div>
                                                     </td>
 
@@ -215,7 +215,7 @@
                                                     <td>Site Power Outlet Available</td>
                                                     <td>
                                                         <div style="margin-left: 5px!important;">
-                                                            <input disabled type="checkbox" style="width: 20px" class="checkbox form-control" id="preinstallCheck" value="checked" name="sitepowerCheck">
+                                                            <input disabled {{newform.dataValues.SitePowerOutletAvailableCheck}} type="checkbox" style="width: 20px" class="checkbox form-control" id="preinstallCheck" value="checked" name="sitepowerCheck">
                                                         </div>
                                                     </td>
 
@@ -238,7 +238,7 @@
                                                     <td>Required Tools Available</td>
                                                     <td>
                                                         <div style="margin-left: 5px!important;">
-                                                            <input disabled type="checkbox" style="width: 20px" class="checkbox form-control" id="requiredtoolCheck" value="checked" name="requiredtoolCheck"></div>
+                                                            <input disabled {{newform.dataValues.RequiredToolsAvailableCheck}} type="checkbox" style="width: 20px" class="checkbox form-control" id="requiredtoolCheck" value="checked" name="requiredtoolCheck"></div>
                                                     </td>
 
                                                     <td>
@@ -260,7 +260,7 @@
                                                     <td>Required Supplies Available</td>
                                                     <td>
                                                         <div style="margin-left: 5px!important;">
-                                                            <input disabled type="checkbox" style="width: 20px" class="checkbox form-control" id="requiredsupllyCheck" value="checked" name="requiredsupllyCheck">
+                                                            <input disabled {{newform.dataValues.RequiredSuppliesAvailableCheck}} type="checkbox" style="width: 20px" class="checkbox form-control" id="requiredsupllyCheck" value="checked" name="requiredsupllyCheck">
                                                         </div>
                                                     </td>
 
@@ -283,7 +283,7 @@
                                                     <td>Site Can Be Locked After Hours</td>
                                                     <td>
                                                         <div style="margin-left: 5px!important;">
-                                                            <input disabled type="checkbox" style="width: 20px" class="checkbox form-control" id="sitelockCheck" value="checked" name="sitelockCheck"></div>
+                                                            <input disabled {{newform.dataValues.SiteCanBeLockedAfterHoursCheck}} type="checkbox" style="width: 20px" class="checkbox form-control" id="sitelockCheck" value="checked" name="sitelockCheck"></div>
                                                     </td>
 
                                                     <td>
@@ -305,7 +305,7 @@
                                                     <td>Lock Keys Assigned To Personnel</td>
                                                     <td>
                                                         <div style="margin-left: 5px!important;">
-                                                            <input disabled type="checkbox" style="width: 20px" class="checkbox form-control" id="lockkeyCheck" value="checked" name="lockkeyCheck"></div>
+                                                            <input disabled {{newform.dataValues.LockKeysAssignedToPersonalCheck}} type="checkbox" style="width: 20px" class="checkbox form-control" id="lockkeyCheck" value="checked" name="lockkeyCheck"></div>
                                                     </td>
 
                                                     <td>
