--- a/views/add_engineer.html
+++ b/views/add_engineer.html
@@ -182,9 +182,9 @@
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <label for="password" class="control-label col-lg-2">Password</label>
+                                        <label for="id" class="control-label col-lg-2">ID</label>
                                         <div class="col-lg-10">
-                                            <input class="form-control" id="password" name="password" type="password" required/>
+                                            <input class="form-control" id="id" name="id" type="text" required/>
                                         </div>
                                     </div>
 
