--- a/views/home/engineers.handlebars
+++ b/views/home/engineers.handlebars
@@ -154,6 +154,7 @@
                                     <tr>
                                         <th>First Name</th>
                                         <th>Last Name</th>
+                                        <th>ID</th>
                                         <th>Email</th>
                                         <th>Department</th>
                                         <th>Salary</th>
@@ -168,6 +169,8 @@
 
                                         <td>{{this.dataValues.LName}}</td>
                                         
+                                        <td>{{this.dataValues.Id}}</td>
+
                                         <td>{{this.dataValues.Email}}</td>
 
                                         <td>{{this.dataValues.Department}}</td>
@@ -237,10 +240,10 @@
             var aData = oTable.fnGetData(nTr);
             var sOut = '<table cellpadding="5" cellspacing="0" border="0" style="padding-left:50px;">';
             sOut += '<tr><td>Name:</td><td>' + aData[1] +" " + aData[2] + '</td></tr>';
-            sOut += '<tr><td>Email:</td><td>' + aData[3] + '</td></tr>';
-            sOut += '<tr><td>Department:</td><td>' + aData[4] + '</td></tr>';
-            sOut += '<tr><td>Salary:</td><td>' + aData[5] + '</td></tr>';
-            sOut += '<tr><td>Password:</td><td>'+"password"+'</td></tr>';
+            sOut += '<tr><td>Email:</td><td>' + aData[4] + '</td></tr>';
+            sOut += '<tr><td>Department:</td><td>' + aData[5] + '</td></tr>';
+            sOut += '<tr><td>Salary:</td><td>' + aData[6] + '</td></tr>';
+            sOut += '<tr><td>ID:</td><td>'+aData[3]+'</td></tr>';
             sOut += '</table>';
 
             return sOut;
